--- a/src/styles/ShotChart.css
+++ b/src/styles/ShotChart.css
@@ -1,8 +1,10 @@
-@charset "UTF-8";
+a@charset "UTF-8";
 
 #shot-chart {
     width: 100%;
-    margin: auto;
+    margin-top: -50px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /********SHOTCHART COURT STYLES****** */
@@ -45,7 +47,6 @@
 svg {
     stroke-width: .2;
 }
-
 svg text {
     font-size: 0.2em;
 }
@@ -151,4 +152,3 @@ path.shot {
     top: 50%;
     left: 100%;
 }
-
